--- a/index.pug
+++ b/index.pug
@@ -9,9 +9,12 @@ html
     title!=title  
     style(type="text/css").
       h1 {color:red;}
-      #mytimer {color:green;}
+      #home {color:blue; font-size: 18px}
   body
-    h1 Bitcointalk ANN update
+    center 
+        h1 Bitcointalk ANN update
+        a(id="home" href="https:www.cnpool.vip") 空气池 It's time to breathe fresh air.
+        h2
     ul
       for item in message      
           li
