--- a/index.pug
+++ b/index.pug
@@ -9,7 +9,7 @@ html
     title!=title  
     style(type="text/css").
       h1 {color:red;}
-      #home {margin: 20 80px}
+      #home {margin: 20px 80px}
   body
     center 
         h1 Bitcointalk ANN update        
