--- a/index.pug
+++ b/index.pug
@@ -12,7 +12,9 @@ html
       #home {margin: 20px 0px}
   body
     center 
-        h1 Bitcointalk ANN update        
+        h1 Bitcointalk ANN update
+        - var update = message.pop();
+        p 最近更新：#{update.updateTime}
     div(id="home")
       ul
         for item in message      
