--- a/index.pug
+++ b/index.pug
@@ -14,7 +14,7 @@ html
     center 
         h1 Bitcointalk ANN update
         - var update = message.pop();
-        p 最近更新：#{update.updateTime}
+        p 每小时抓取，最近更新：#{update.updateTime}
     div(id="home")
       ul
         for item in message      
