--- a/index.pug
+++ b/index.pug
@@ -12,7 +12,7 @@ html
       #home {margin: 20px 0px}
   body
     center 
-        h1 Bitcointalk ANN update
+        h1 ANN 更新
         - var update = message.pop();
         p 每小时抓取，最近更新：#{update.updateTime}
     div(id="home")
