--- a/index.pug
+++ b/index.pug
@@ -19,7 +19,7 @@ html
       ul
         for item in message      
             li
-               a(target= "_blank" href=item.ann_href)       #{item.ann_msgID}  :   #{item.ann_title}
+               a(target= "_blank" href=item.ann_href)       #{item.ann_topicID}  :   #{item.ann_title}
   footer
         div(class="text-muted")
            span Powered by 
