--- a/index.pug
+++ b/index.pug
@@ -16,10 +16,16 @@ html
         - var update = message.pop();
         p 每小时抓取，最近更新：#{update.updateTime}
     div(id="home")
+      p POW ANN
       ul
-        for item in message      
+        for item in message.powData      
             li
                a(target= "_blank" href=item.ann_href)       #{item.ann_topicID}  :   #{item.ann_title}
+      p POS ANN
+      ul
+        for item in message.posData      
+            li
+               a(target= "_blank" href=item.ann_href)       #{item.ann_topicID}  :   #{item.ann_title}              
   footer
         div(class="text-muted")
            span Powered by 
