--- a/index.pug
+++ b/index.pug
@@ -9,6 +9,7 @@ html
     title!=title  
     style(type="text/css").
       h1 {color:red;}
+      p {color:blue;}
       #home {margin: 20px 0px}
   body
     center 
@@ -16,14 +17,19 @@ html
         - var update = message.pop();
         p 每小时抓取，最近更新：#{update.updateTime}
     div(id="home")
-      p POW ANN (Total: #{message[0].powData.length})
+      p #POW ANN (Total: #{message[0].powData.length})
       ul
         for item in message[0].powData      
             li
                a(target= "_blank" href=item.ann_href)       #{item.ann_topicID}  :   #{item.ann_title}
-      p POS ANN (Total:  #{message[1].posData.length})
+      p #MN ANN (Total: #{message[1].mnData.length})
       ul
-        for item in message[1].posData      
+        for item in message[1].mnData      
+            li
+               a(target= "_blank" href=item.ann_href)       #{item.ann_topicID}  :   #{item.ann_title}
+      p #POS ANN (Total:  #{message[2].posData.length})
+      ul
+        for item in message[2].posData      
             li
                a(target= "_blank" href=item.ann_href)       #{item.ann_topicID}  :   #{item.ann_title}              
   footer
