--- a/index.pug
+++ b/index.pug
@@ -35,7 +35,7 @@ html
   footer
         div(class="text-muted")
            span Powered by 
-             a(target="_blank" href="https://www.cnpool.vip")
+             a(href="https://www.cnpool.vip")
                 span  空气池cnpool.vip 
            span   QQ交流群：686394624
              a(href="http://18.136.47.113")   小福利
