--- a/index.pug
+++ b/index.pug
@@ -5,7 +5,7 @@ html
     meta(http-equiv="refresh" content="900")
     link(href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet")
     link(href="//cdn.bootcss.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet")
-    link(href="/css/default.css" rel="stylesheet")
+    link(href="/default.css" rel="stylesheet")
     title!=title  
     style(type="text/css").
       h1 {color:red;}
