--- a/index.pug
+++ b/index.pug
@@ -34,8 +34,7 @@ html
                a(target= "_blank" href=item.ann_href)       #{item.ann_topicID}  :   #{item.ann_title}              
   footer
         div(class="text-muted")
-           span Powered by 
+           span 出品: 
              a(href="https://www.cnpool.vip")
-                span  空气池cnpool.vip 
-           span   QQ交流群：686394624
-             a(href="http://18.136.47.113")   小福利
+                span  空气池 
+           span   QQ群:686394624
